--- a/fisrt.ipynb
+++ b/fisrt.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN01HDRLabSfzovc2T6Zd+P",
+      "authorship_tag": "ABX9TyOkhI94MkZ8yrEjg5gGkXu5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,13 +52,77 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "This is a text to test sth"
+        "!pip install numpy"
       ],
       "metadata": {
-        "id": "BYy1ffAEpnAG"
-      }
+        "id": "vJAaNOYmreLh",
+        "outputId": "2a543a72-1a3a-4b15-bf8f-23367ff115cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (1.23.5)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "\n",
+        "\n",
+        "import logging\n",
+        "logger = tf.get_logger()\n",
+        "logger.setLevel(logging.ERROR)"
+      ],
+      "metadata": {
+        "id": "dt7hOxTyqoUq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "celsius_q    = np.array([-40, -10,  0,  8, 15, 22,  38],  dtype=float)\n",
+        "fahrenheit_a = np.array([-40,  14, 32, 46, 59, 72, 100],  dtype=float)\n",
+        "\n",
+        "for i,c in enumerate(celsius_q):\n",
+        "  print(\"{} degrees Celsius = {} degrees Fahrenheit\".format(c, fahrenheit_a[i]))"
+      ],
+      "metadata": {
+        "id": "RDxPAmKuqy01",
+        "outputId": "b21f07e9-2483-43f5-8f81-0f4390fab41f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-40.0 degrees Celsius = -40.0 degrees Fahrenheit\n",
+            "-10.0 degrees Celsius = 14.0 degrees Fahrenheit\n",
+            "0.0 degrees Celsius = 32.0 degrees Fahrenheit\n",
+            "8.0 degrees Celsius = 46.0 degrees Fahrenheit\n",
+            "15.0 degrees Celsius = 59.0 degrees Fahrenheit\n",
+            "22.0 degrees Celsius = 72.0 degrees Fahrenheit\n",
+            "38.0 degrees Celsius = 100.0 degrees Fahrenheit\n"
+          ]
+        }
+      ]
     }
   ]
 }
