--- a/Converting Celsius to Fahrenheit.ipynb
+++ b/Converting Celsius to Fahrenheit.ipynb
@@ -1,117 +1,34 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyOkhI94MkZ8yrEjg5gGkXu5",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "id": "dt7hOxTyqoUq"
       },
+      "outputs": [],
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sondosaabed/Intro-to-tenserflow-for-deep-learning/blob/main/fisrt.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "import tensorflow as tf\n",
+        "import numpy as np\n",
+        "import logging\n",
+        "logger = tf.get_logger()\n",
+        "logger.setLevel(logging.ERROR)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "wS1vF2GJlh1t",
-        "outputId": "027af4a5-70f7-494a-836e-996cf88c8a5d"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello world\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(\"Hello world\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install numpy"
-      ],
-      "metadata": {
-        "id": "vJAaNOYmreLh",
-        "outputId": "2a543a72-1a3a-4b15-bf8f-23367ff115cb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (1.23.5)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import tensorflow as tf\n",
-        "\n",
-        "\n",
-        "import logging\n",
-        "logger = tf.get_logger()\n",
-        "logger.setLevel(logging.ERROR)"
-      ],
-      "metadata": {
-        "id": "dt7hOxTyqoUq"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "celsius_q    = np.array([-40, -10,  0,  8, 15, 22,  38],  dtype=float)\n",
-        "fahrenheit_a = np.array([-40,  14, 32, 46, 59, 72, 100],  dtype=float)\n",
-        "\n",
-        "for i,c in enumerate(celsius_q):\n",
-        "  print(\"{} degrees Celsius = {} degrees Fahrenheit\".format(c, fahrenheit_a[i]))"
-      ],
-      "metadata": {
         "id": "RDxPAmKuqy01",
-        "outputId": "b21f07e9-2483-43f5-8f81-0f4390fab41f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "b21f07e9-2483-43f5-8f81-0f4390fab41f"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "-40.0 degrees Celsius = -40.0 degrees Fahrenheit\n",
             "-10.0 degrees Celsius = 14.0 degrees Fahrenheit\n",
@@ -122,7 +39,41 @@
             "38.0 degrees Celsius = 100.0 degrees Fahrenheit\n"
           ]
         }
+      ],
+      "source": [
+        "celsius_q = np.array([-40, -10,  0,  8, 15, 22,  38],  dtype=float)\n",
+        "fahrenheit_a = np.array([-40,  14, 32, 46, 59, 72, 100],  dtype=float)\n",
+        "\n",
+        "for i,c in enumerate(celsius_q):\n",
+        "  print(\"{} degrees Celsius = {} degrees Fahrenheit\".format(c, fahrenheit_a[i]))"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyOkhI94MkZ8yrEjg5gGkXu5",
+      "gpuType": "T4",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.0"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
