model: calculate weights

--- a/Converting Celsius to Fahrenheit.ipynb
+++ b/Converting Celsius to Fahrenheit.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<b>Converting Celsius to Fahrenheit</b>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 10,
       "metadata": {
@@ -14,6 +21,13 @@
         "logger = tf.get_logger()\n",
         "logger.setLevel(logging.ERROR)\n",
         "import matplotlib.pyplot as plt"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Dataset"
       ]
     },
     {
@@ -171,7 +185,7 @@
       "source": [
         "<b>Predicting using the model</b>\n",
         "\n",
-        "- We can now use it to pridct anything"
+        "- We can now use it to pridct any degree"
       ]
     },
     {
@@ -199,6 +213,39 @@
       ],
       "source": [
         "model.predict([100.0])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<b>Layer calcualted weights</b>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "These are the layer variables: [array([[1.8258514]], dtype=float32), array([28.713398], dtype=float32)]\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"These are the layer variables: {}\".format(l0.get_weights()))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- There are two variables, and they are actually the numbers used in the formual which converts.\n",
+        "    - 1.82 ...\n",
+        "    - 28.71 (prettey close to 32)"
       ]
     }
   ],
