refactor: more context

--- a/Converting Celsius to Fahrenheit.ipynb
+++ b/Converting Celsius to Fahrenheit.ipynb
@@ -70,7 +70,8 @@
         "<b>Build a layer</b>\n",
         "\n",
         "- single dense layer ( input shape 1 = the celuis degrees coming in)\n",
-        "- units how many internal variables this layer have"
+        "- units how many internal variables this layer have \n",
+        "- units are the neurons and are the nodes. "
       ]
     },
     {
