--- a/recap.ipynb
+++ b/recap.ipynb
@@ -80,7 +80,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This optimization process is called <b>Gradient Descent.</b> The specific algorithm used to calculate the new value of each internal variable is specified by the optimizer parameter when calling model.compile(...). In this example we used the Adam optimizer."
+    "This optimization process is called <b>Gradient Descent.</b> \n",
+    "\n",
+    "The specific algorithm used to calculate the new value of each internal variable is specified by the optimizer parameter when calling model.compile(...). \n",
+    "\n",
+    "In this example we used the Adam optimizer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Dense Layers</b>\n",
+    "\n",
+    "fully connected to the previous layers\n",
+    "\n",
+    "![Alt text](<explanation images/dense layer.png>)"
    ]
   }
  ],
