refactor: inline image path

--- a/recap.ipynb
+++ b/recap.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Alt text](<explanation images/forward pass.png>)"
+    "![Alt text](<./explanation images/forward pass.png>)"
    ]
   },
   {
