refactor: image showing

--- a/recap.ipynb
+++ b/recap.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Alt text](image.png)"
+    "![Alt text](forward_pass.png)"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "source": [
     "After the loss is calculated, the internal variables (weights and biases) of all the layers of the neural network are adjusted, so as to minimize this loss — that is, to make the output value closer to the correct value\n",
     "\n",
-    "![Alt text](<explanation images/backpropagtion.png>)"
+    "![Alt text](backpropagtion.png)"
    ]
   },
   {
@@ -95,7 +95,7 @@
     "\n",
     "fully connected to the previous layers\n",
     "\n",
-    "![Alt text](<explanation images/dense layer.png>)"
+    "![Alt text](dense_layer.png)\n"
    ]
   }
  ],
