--- a/Dense.ipynb
+++ b/Dense.ipynb
@@ -17,7 +17,10 @@
     "- <b>Batch:</b> The set of examples used during training of the neural network\n",
     "- <b>Epoch</b>: A full pass over the entire training dataset\n",
     "- <b>Forward pass:</b> The computation of output values from input\n",
-    "- <b>Backward pass (backpropagation)</b>: The calculation of internal variable adjustments according to the optimizer algorithm, starting from the output layer and working back through each layer to the input."
+    "- <b>Backward pass (backpropagation)</b>: The calculation of internal variable adjustments according to the optimizer algorithm, starting from the output layer and working back through each layer to the input.\n",
+    "- <b>Flattening:</b> The process of converting a 2d image into 1d vector\n",
+    "- <b>ReLU:</b> An activation function that allows a model to solve nonlinear problems\n",
+    "- <b>Softmax:</b> A function that provides probabilities for each possible output class"
    ]
   },
   {
@@ -96,6 +99,49 @@
     "fully connected to the previous layers\n",
     "\n",
     "![Alt text](dense_layer.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Output layers</b>\n",
+    "- the numbers of possible classes (letters) , the confidence that the model has that the object is that output. The sum of them is 1\n",
+    "- probablity distribution (using the softmax)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>The Rectified Linear Unit (ReLU)</b>\n",
+    "\n",
+    "In this lesson we talked about ReLU and how it gives our Dense layer more power. ReLU stands for Rectified Linear Unit and it is a mathematical function \n",
+    "\n",
+    "\n",
+    "ReLU gives the network the ability to solve nonlinear problems.\n",
+    "\n",
+    "ReLU is a type of activation function. There several of these functions (ReLU, Sigmoid, tanh, ELU), but ReLU is used most commonly and serves as a good default."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Validation</b>\n",
+    "\n",
+    "it is common to use what is called a Validation dataset. This dataset is not used for training. Instead, it it used to test the model during training. This is done after some set number of training steps, and gives us an indication of how the training is progressing. For example, if the loss is being reduced during training, but accuracy deteriorates on the validation set, that is an indication that the model is memorizing the test set.\n",
+    "\n",
+    "The validation set is used again when training is complete to measure the final accuracy of the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Testing</b>\n",
+    "\n",
+    "We test it to check if it memorizes it or it does generalize on new forms"
    ]
   }
  ],
