CNNs: convolutional & maxpooling

--- a/Dense.ipynb
+++ b/Dense.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Alt text](forward_pass.png)"
+    "![Alt text](explanation_images/forward_pass.png)"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "source": [
     "After the loss is calculated, the internal variables (weights and biases) of all the layers of the neural network are adjusted, so as to minimize this loss — that is, to make the output value closer to the correct value\n",
     "\n",
-    "![Alt text](backpropagtion.png)"
+    "![Alt text](explanation_images/backpropagtion.png)"
    ]
   },
   {
@@ -98,7 +98,7 @@
     "\n",
     "fully connected to the previous layers\n",
     "\n",
-    "![Alt text](dense_layer.png)\n"
+    "![Alt text](explanation_images/dense_layer.png)\n"
    ]
   },
   {
