--- a/Fashion MNIST classification.ipynb
+++ b/Fashion MNIST classification.ipynb
@@ -602,7 +602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Acheieved a higher accuracy at training so it might be memorizing and lower accuracy at testing. "
+    "- Acheieved a higher accuracy at training so it might be memorizing and lower accuracy at testing. bias-variance trade off"
    ]
   }
  ],
