modified:   Convolutional & maxpooling.ipynb

--- a/Convolutional & maxpooling.ipynb
+++ b/Convolutional & maxpooling.ipynb
@@ -82,6 +82,20 @@
    "source": [
     "![Alt text](explanation_images/maxppoling.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Comprehensive CNN</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Alt text](explanation_images\\comprehensive_cnn.png)"
+   ]
   }
  ],
  "metadata": {
