Forecasting: split to train and validation

--- a/Time Series Forecasting.ipynb
+++ b/Time Series Forecasting.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Common Patterns</b>"
+    "<b>Common Patterns of time series</b>"
    ]
   },
   {
@@ -367,6 +367,58 @@
    "source": [
     "series += noise\n",
     "plot_series(time, series)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Forecasting</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>To mesure performancce:</b>\n",
+    "\n",
+    "1- fixed partitioning\n",
+    "\n",
+    "![Alt text](explanation_images/fixedPartitioning.png)\n",
+    "\n",
+    "\n",
+    "We also train on the test period (which is not usual in ML) because it contains the most recent is the one that is most useful info to predict the future.\n",
+    "\n",
+    "2- Roll-forward Partitioning\n",
+    "\n",
+    "![Alt text](explanation_images/rollForward.png)\n",
+    "\n",
+    "it will require more training time, but it will mimick the "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split_time = 1000\n",
+    "time_train = time[:split_time]\n",
+    "x_train = series[:split_time]\n",
+    "\n",
+    "time_valid = time[split_time:]\n",
+    "x_valid = time[split_time:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Naive Forescasting</b>\n",
+    "\n",
+    "Take the last value and assume the next will be the same.\n",
+    "\n",
+    "![Alt text](explanation_images/naiveForcasting.png)"
    ]
   }
  ],
