RNNs: sequence to vector

--- a/RNN time series forecasting.ipynb
+++ b/RNN time series forecasting.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "- Very powerful \n",
     "- Requires Data\n",
-    "- Tricky to train (somewhat unstable)"
+    "- Tricky to train (somewhat unstable gradiet)"
    ]
   },
   {
@@ -43,6 +43,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- 4*3 becaue the batch size is 4, the # of steps (30) and the # of uits is 3\n",
+    "- H0 is just a copy of Y0... H1 is a copy of Y1\n",
+    "\n",
     "![Alt text](image.png)"
    ]
   },
@@ -50,6 +53,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- this is ignorong all the output except the last one\n",
+    "- will handle any sequences of any length  \n",
+    "\n",
     "![Alt text](image-1.png)"
    ]
   }
